--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-numpy==1.22.4
-pandas==1.4.4
-pickle5==0.0.11
-plotly==5.10.0
-scikit_learn==1.2.2
-streamlit==1.11.1
+streamlit>=1.26.0
+numpy>=1.26.4
+pandas>=2.0.3
+plotly>=5.18.0
+scikit-learn>=1.4.2
